--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mc-itemslot {
+  position: relative;
+  display: inline-block;
+  text-align: center !important;
+  background-color: #8b8b8b;
+  border-color: #373737 #fff #fff #373737;
+  border-style: solid;
+  border-width: 2px;
+  vertical-align: middle;
+}
+
+.mc-itemslot:hover {
+  background-color: #dddddd;
+}
