Change dragged item to string

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,34 @@
 .mc-itemslot:hover {
   background-color: #dddddd;
 }
+
+.mc-inventory {
+  user-select: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  margin-top: 10px;
+  background: #c6c6c6;
+  border: 2px solid #373737;
+  border-right-color: #fff;
+  border-bottom-color: #fff;
+  min-height: 60px;
+  max-height: 700px;
+  overflow-y: scroll;
+  max-width: 402px;
+}
+
+.mc-inventory::-webkit-scrollbar {
+  width: auto;
+}
+
+.mc-inventory::-webkit-scrollbar-track {
+  background-color: #8b8b8b;
+}
+
+.mc-inventory::-webkit-scrollbar-thumb {
+  height: 10px;
+  background-color: #c6c6c6;
+  border: 2px solid;
+  border-color: #373737 #ffffff #ffffff #373737;
+}
