--- a/src/index.css
+++ b/src/index.css
@@ -6,31 +6,13 @@
   position: relative;
   display: inline-block;
   text-align: center !important;
-  background-color: #8b8b8b;
-  border-color: #373737 #fff #fff #373737;
-  border-style: solid;
-  border-width: 2px;
   vertical-align: middle;
+  min-width: 40px;
+  min-height: 40px;
 }
 
 .mc-itemslot:hover {
   background-color: #dddddd;
-}
-
-.mc-inventory {
-  user-select: none;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
-  margin-top: 10px;
-  background: #c6c6c6;
-  border: 2px solid #373737;
-  border-right-color: #fff;
-  border-bottom-color: #fff;
-  min-height: 60px;
-  max-height: 700px;
-  overflow-y: scroll;
-  max-width: 402px;
 }
 
 .mc-inventory::-webkit-scrollbar {
@@ -46,4 +28,49 @@
   background-color: #c6c6c6;
   border: 2px solid;
   border-color: #373737 #ffffff #ffffff #373737;
+}
+
+.input-parent{
+  padding: 1rem;
+}
+
+.main{
+  min-width: 40%;
+  max-width: 60%;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 4rem 0rem;
+  gap: 6rem;
+}
+
+.crafting-grid-parent{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.recipe-grid{
+  display: flex;
+  flex-direction: row;
+  gap: 4rem;
+  align-items: center;
+}
+
+.crafting-grid{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: max-content;
+  height: max-content;
+}
+
+.code{
+  min-width: 400px ;
+}
+
+.item-inventories{
+  padding: 1rem;
 }
